--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -7,6 +7,7 @@
   {% if description %}<meta name="description" content="{{ description }}" />{% endif %}
   <meta name="robots" content="index,follow" />
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body>
   <header>
