--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -7,7 +7,9 @@
   {% if description %}<meta name="description" content="{{ description }}" />{% endif %}
   <meta name="robots" content="index,follow" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+<link rel="icon" href="/favicon.ico" sizes="any" />
+
 </head>
 <body>
   <header>
